# amazing_life

./: README.md  amazing.py  main.py  pyproject.toml
